[package]
name = "debugit"
version = "0.1.1"
authors = ["bluss"]

description = """Debug-print any value without trait bounds using specialization (Rust nightly channel)"""
license = "Apache-2.0/MIT"
documentation = "https://docs.rs/debugit/"
repository = "https://github.com/bluss/debugit"

build = "build.rs"

[build-dependencies]
version_check = "0.1"

[dependencies]
