[package]
name = "debugit"
version = "0.2.0"
authors = ["bluss"]
edition = "2018"

description = """Debug-print any value without trait bounds using specialization (Rust nightly channel)"""
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/debugit/"
repository = "https://github.com/bluss/debugit"

[dependencies]
